--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
-body{
+body {
   text-align:center;
+  height: 1000px;
+  background: -webkit-linear-gradient(red, yellow, green); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(red, yellow, green); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(red, yellow, green); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(red, yellow, green); /* Standard syntax (must be last) */
+  background-repeat: no-repeat;
 }
 
-h1{
+h1 {
+  font-family: 'Rock Salt', cursive;
   text-align: center;
+  padding-top: 30px;
   padding-bottom: 15px;
+  color: black;
+  font-size: 50px;
+  }
+
+#button {
+  border-radius: 60px;
+  color: pink;
+  font-family: 'Permanent Marker', cursive;
+
+}
+
+#form1 {
+  border-radius: 80px;
+  background-color: black;
+  color: white
+}
+
+.result {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 50px;
 }
